--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@srexi/purecounterjs": "^1.5.0",
     "core-js": "^3.8.3",
+    "countup.js": "^2.3.2",
     "vue": "^2.6.14",
+    "vue-count-to": "^1.0.13",
+    "vue-countup-v2": "^4.0.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
