--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "focus-med",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "@srexi/purecounterjs": "^1.5.0",
-    "core-js": "^3.8.3",
-    "countup.js": "^2.3.2",
-    "vue": "^2.6.14",
-    "vue-count-to": "^1.0.13",
-    "vue-countup-v2": "^4.0.0",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "axios": "^1.2.1",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
-  }
+    "name": "focus-med",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build"
+    },
+    "dependencies": {
+        "@srexi/purecounterjs": "^1.5.0",
+        "core-js": "^3.8.3",
+        "countup.js": "^2.3.2",
+        "swiper-vue2": "^1.0.10",
+        "vue": "^2.6.14",
+        "vue-count-to": "^1.0.13",
+        "vue-countup-v2": "^4.0.0",
+        "vue-nav-tabs": "^0.5.7",
+        "vue-router": "^3.5.1",
+        "vue-slick-carousel": "^1.0.6",
+        "vue-split-carousel": "^2.2.3",
+        "vue-tabs-component": "^1.5.0",
+        "vuex": "^3.6.2"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~5.0.0",
+        "@vue/cli-plugin-router": "~5.0.0",
+        "@vue/cli-plugin-vuex": "~5.0.0",
+        "@vue/cli-service": "^5.0.8",
+        "axios": "^1.2.1",
+        "sass": "^1.32.7",
+        "sass-loader": "^12.0.0",
+        "vue-template-compiler": "^2.6.14"
+    }
 }
