--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vue": "^2.6.14",
         "vue-count-to": "^1.0.13",
         "vue-countup-v2": "^4.0.0",
+        "vue-expandable-image": "^0.1.0",
         "vue-nav-tabs": "^0.5.7",
         "vue-router": "^3.5.1",
         "vue-slick-carousel": "^1.0.6",
