--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "countup.js": "^2.3.2",
         "swiper-vue2": "^1.0.10",
         "vue": "^2.6.14",
+        "vue-burger-menu": "^2.0.5",
         "vue-count-to": "^1.0.13",
         "vue-countup-v2": "^4.0.0",
         "vue-expandable-image": "^0.1.0",
