--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "@srexi/purecounterjs": "^1.5.0",
         "core-js": "^3.8.3",
         "countup.js": "^2.3.2",
+        "jquery": "^3.6.3",
         "swiper-vue2": "^1.0.10",
-        "vue": "^2.6.14",
+        "vue": "^2.7.14",
         "vue-burger-menu": "^2.0.5",
+        "vue-check-view": "^0.3.0",
         "vue-count-to": "^1.0.13",
         "vue-countup-v2": "^4.0.0",
         "vue-expandable-image": "^0.1.0",
