--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     },
     "dependencies": {
         "@srexi/purecounterjs": "^1.5.0",
+        "aos": "^2.3.4",
         "core-js": "^3.8.3",
         "countup.js": "^2.3.2",
         "jquery": "^3.6.3",
-        "swiper-vue2": "^1.0.10",
+        "swiper": "^9.0.2",
         "vue": "^2.7.14",
+        "vue-awesome-swiper": "^3.1.3",
         "vue-burger-menu": "^2.0.5",
         "vue-check-view": "^0.3.0",
         "vue-count-to": "^1.0.13",
@@ -33,6 +35,7 @@
         "axios": "^1.2.1",
         "sass": "^1.32.7",
         "sass-loader": "^12.0.0",
+        "vue-image-lightbox-carousel": "^1.0.7",
         "vue-template-compiler": "^2.6.14"
     }
 }
