--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "vue": "^2.7.14",
         "vue-awesome-swiper": "^3.1.3",
         "vue-burger-menu": "^2.0.5",
-        "vue-check-view": "^0.3.0",
         "vue-count-to": "^1.0.13",
         "vue-countup-v2": "^4.0.0",
         "vue-expandable-image": "^0.1.0",
@@ -35,7 +34,9 @@
         "axios": "^1.2.1",
         "sass": "^1.32.7",
         "sass-loader": "^12.0.0",
+        "vue-check-view": "^0.3.0",
         "vue-image-lightbox-carousel": "^1.0.7",
+        "vue-in-viewport-directive": "^2.0.2",
         "vue-template-compiler": "^2.6.14"
     }
 }
