--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-slick-carousel": "^1.0.6",
         "vue-split-carousel": "^2.2.3",
         "vue-tabs-component": "^1.5.0",
+        "vue-toast-notification": "^0.6.3",
         "vuex": "^3.6.2"
     },
     "devDependencies": {
